[tool.poetry]
name = "orwrap"
authors = ["Marian Meyer"]
version = "0.2.0"
description = ""

[tool.poetry.dependencies]
python = "^3.8.8"
ortools = "^9.0.8084"
numpy = "^1.20.2"
scipy = "^1.6.1"
cython = "0.29.24"

[build-system]
requires = [
  "wheel",
  "cython",
  "ortools",
  "setuptools",
  "poetry-core"
]
build-backend = "poetry.core.masonry.api"
